# Unit Tests for cskburn
# 
# This is a placeholder CMakeLists.txt for future test infrastructure.
# Uncomment and modify when adding actual tests.

# Example using Unity test framework:
# add_executable(test_slip test_slip.c)
# target_link_libraries(test_slip slip unity)
# add_test(NAME test_slip COMMAND test_slip)

# Example using cmocka test framework:
# add_executable(test_serial test_serial.c)
# target_link_libraries(test_serial serial cmocka)
# add_test(NAME test_serial COMMAND test_serial)

message(STATUS "Test infrastructure placeholder - no tests configured yet")
